Remove Setting definition indirections
`TableParameterInfo` contained a lot of constant definitions for
settings that are defined elsewhere.

This removes them, as there is no real benefit by having them.